# proof-of-key

./: Cargo.toml  README.md
crypto/: Cargo.toml
crypto/src/: lib.rs
holder/: Cargo.toml
holder/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
