[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] } 
axum  = { version = "0.8.4",  features = ["json", "tokio", "http1"] }                     
serde = { version = "1.0",  features = ["derive"] }
uuid  = { version = "1.7", features = ["v4"] }
crypto = { path = "../crypto" }
base64 = "0.22" 
chrono  = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow  = "1.0"                    
tracing = "0.1"                                                        
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }      
